--- a/client/assets/css/cats.css
+++ b/client/assets/css/cats.css
@@ -616,7 +616,7 @@ height: 32px;
 background: #ffcc80;
 border-radius: 45%;
 border: 0px solid transparent;
-z-index: 0;
+z-index: 2;
 box-shadow: inset 1px 1px 5px rgb(134, 111, 111);
 }
     .cat__paw-shadowInnerR{
@@ -646,10 +646,10 @@ box-shadow: inset 1px 1px 5px rgb(134, 111, 111);
         }
         .claws__right2 {
             left: 58%;
-            top: 55%;
+            top: 60%;
         }
         .claws__right3 {
-            right: -8%;
+            left: 87%;
         }
         
 .cat__paw-left_inner {
@@ -680,6 +680,7 @@ box-shadow: inset 1px 1px 5px rgb(134, 111, 111);
             top: 6px;
             width: 0;
             height: 0;
+            left: 0px;
             border-left: 2px solid transparent;
             border-right: 2px solid transparent;
             border-top: 10px solid black;
@@ -692,7 +693,7 @@ box-shadow: inset 1px 1px 5px rgb(134, 111, 111);
         }
         .claws__left2 {
             left: 23%;
-            top: 55%;
+            top: 60%;
         }
         .claws__left3 {
             left: 55%;
@@ -720,7 +721,7 @@ box-shadow: inset 1px 1px 5px rgb(134, 111, 111);
         border-right: 2px solid transparent;
         border-top: 136px solid rgb(75, 74, 74);
         transform: rotate(270deg);
-        z-index: -100;       
+        z-index: 1;       
     }
         .tail__whisker{
             position: absolute;
