--- a/client/assets/css/frontend.css
+++ b/client/assets/css/frontend.css
@@ -9,6 +9,13 @@
     background-position:bottom;
 }
 
+.cat-container{
+    cursor: pointer;
+    margin-bottom: 25px;
+    /*min-width: 200px;*/
+    max-width: 375px;
+
+}
 
 .navbar-brand {
     font-weight: 700;
@@ -35,6 +42,11 @@
 
 #canvas {
     position: absolute;
+}
+
+.ml-5 {
+    margin-left: 1.3rem!important;
+    margin-top: 7px;
 }
 
 .banner {
@@ -64,15 +76,15 @@ footer {
 
 .featureBox {
 
+    min-height: 97%;
     padding-left:30px;
     padding-right:30px;
-    padding-top: 70px;
-    padding-bottom: 30px;
+    padding-top: 40px;
     border: 1px solid #ffc5c2;
     background-color: rgba(245, 237, 237, 0.582);
     border-radius: 10px;
     margin:10px;
-    transition: 0.8s ease-in-out;
+    transition: 0.4s ease-in-out;
 }
 
 .featureBox h4 {
@@ -82,6 +94,7 @@ footer {
 .featureBox:hover {
     border: 1px solid #ffffff;
     box-shadow: 0px 16px 35px 0px rgba(0, 0, 2, 0.08);
+    transform: scale(1.05);
 }
 
 
