--- a/client/assets/css/animations.css
+++ b/client/assets/css/animations.css
@@ -64,7 +64,7 @@
 }
 
 .movingLeftEar{
-    animation: moveLeftEar 8s forwards;
+    animation: moveLeftEar 8s infinite;
 
 }
 @keyframes moveLeftEar {
@@ -77,7 +77,7 @@
     }
 }
 .movingRightEar{
-    animation: moveRightEar 8s forwards;
+    animation: moveRightEar 8s infinite;
 
 }
 @keyframes moveRightEar {
@@ -109,7 +109,7 @@
 }
 
 .growingClaws {
-    animation: growClaws 4s forwards;
+    animation: growClaws 8s infinite;
 }
 @keyframes growClaws {
     0% {
@@ -120,7 +120,7 @@
     }
 }
 .growingClawsInner {
-    animation: growClawsI 4s forwards;
+    animation: growClawsI 8s infinite;
 }
 @keyframes growClawsI {
     0% {
