--- a/client/assets/css/frontend.css
+++ b/client/assets/css/frontend.css
@@ -1,4 +1,20 @@
+.showUp {
+    margin-top: 2vh;
+    margin-bottom: 2vh; 
+    display: block;
+}
 
+.newBreed {
+    margin-top: 2vh;
+    margin-bottom: 2vh; 
+    display: none;
+}
+
+.notification {
+    margin-top: 5vh; 
+    margin-bottom: 10vh; 
+    display: none;
+}
 
 
 .frontend {
