--- a/client/assets/css/frontend.css
+++ b/client/assets/css/frontend.css
@@ -1,3 +1,10 @@
+.cat-owner{
+    position: absolute;
+    top: 26px;
+    right: 43px;
+    z-index: 2;
+}
+
 #panelHandler {
     transition: 1s;
     opacity: 0;
@@ -47,7 +54,6 @@
     margin-bottom: 25px;
     /*min-width: 200px;*/
     max-width: 375px;
-
 }
 
 .navbar-brand {
@@ -128,6 +134,14 @@ footer {
     border: 1px solid #ffffff;
     box-shadow: 0px 16px 35px 0px rgba(0, 0, 2, 0.08);
     transform: scale(1.05);
+}
+
+.btn-dark {
+    transition: 0.8s ease-in-out;
+}
+
+.btn-dark:hover {
+    transform: scale(1.2);
 }
 
 
